# support_service

./: Dockerfile  Makefile  README.md  pyproject.toml
support_service_app/: ai_settings.py  app.py  chat_manager.py  crm_connector.py  db.py  history.py  hybrid_search.py
support_service_app/knowlage/: медицина энциклопедия.txt:Zone.Identifier  приказ МЧС России 452.txt  энциклопедия.txt  энциклопедия.txt:Zone.Identifier
support_service_app/tg_bots/: test_bot.py
